Updates from Overleaf

--- a/DoR_Proof.tex
+++ b/DoR_Proof.tex
@@ -1,4 +1,5 @@
-\subsection{Proof of Theorem \ref{thm:infoDensityAchievabilityDoR}}
+\subsection{Proof of \ref{thm:infoDensityAchievabilityDoR}
+}
 \label{appendix:thm1Proof}
 \begin{table}[h]
 \centering
@@ -141,9 +142,9 @@ If the decoder is not able to make a determination at the final decoding point $
 The decision rules defined by \eqref{eq:sht_0k}, \eqref{eq:sht_1k} and \eqref{eq:decoding definition} map to the  decoding regions Def: \ref{def:general_code} as :
  \begin{subequations}
  \begin{align}
-\nonumber\mathcal{I}_{n_l,k}\hspace{-.3em}&= \bigg\{y^{n_l}: \left( \tau^0_{0,k}\leq n_l\right)\cap
-    \\&\quad\left( \tau^0_{0,k}<(\min_{m\in\mathcal{K}^j\backslash k}\tau^0_{0,m})\right)\cap\left(\tau^0_{0,k}<(\max_{m\in\mathcal{K}^j}\tau^1_{1,m})\right)\bigg\}, \\\nonumber\mathcal{O}_{n_l} &= \bigg\{y^{n_l}: \left( (\max_{m\in\mathcal{K}^j} \tau^1_{1,m})\leq n_l\right)\cap
-    \\&\quad\quad\quad\left( (\max_{m\in\mathcal{K}^j} \tau^1_{1,m})<( \min_{m\in\mathcal{K}^j} \tau^0_{0,m})\right)\bigg\},   
+\mathcal{I}_{n_l,k}&= \left\{y^{n_l}: \left( \tau^0_{0,k}\leq n_l\right)\cap
+    \left( \tau^0_{0,k}<(\min_{m\in\mathcal{K}^j\backslash k}\tau^0_{0,m})\right)\cap\left(\tau^0_{0,k}<(\max_{m\in\mathcal{K}^j}\tau^1_{1,m})\right)\right\}, \\\mathcal{O}_{n_l} &= \left\{y^{n_l}: \left( (\max_{m\in\mathcal{K}^j} \tau^1_{1,m})\leq n_l\right)\cap
+    \left( (\max_{m\in\mathcal{K}^j} \tau^1_{1,m})<( \min_{m\in\mathcal{K}^j} \tau^0_{0,m})\right)\right\},   
     \\\mathcal{C}_{n_l} &=\left\{\mathcal{O}_{n_l}\cup\left(\underset{k\in{\mathcal{K}}}{\bigcup}\mathcal{I}_{n_l,k}\right)\right\}^C
 \end{align}
 \label{eq:decodingRegionsAssoc}
