--- a/thesis.tex
+++ b/thesis.tex
@@ -134,9 +134,6 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor i
 This is the introduction chapter. We cite some classic works \cite{108245}.  
 
 
-\begin{theorem}\label{thm1}
-This is a theorem
-\end{theorem}
 
 We reference Theorem \ref{thm1}.
 
@@ -226,7 +223,7 @@ This is a standard result from algebra.
 \end{figure}
 \fi
 \section{Results}
-\include{DoR_Proof}
+\include{DoR_Bounds}
 \section{Numeric Simulations}
 \ifdefined\NOTOVERLEAF
 \begin{figure}[h]
@@ -256,8 +253,9 @@ This is a standard result from algebra.
 \fi
 
 
-\section{Second main result}
-Another significant theorem.
+\section{Proofs}
+
+\include{DoR_Proof}
 
 \chapter{Vitae}
 
