--- a/refs.bib
+++ b/refs.bib
@@ -19,3 +19,96 @@
   pages={14-25},
   keywords={Codes;Channel capacity;Memoryless systems;Decoding;Tellurium;Sun;Information theory;Information systems;State feedback},
   doi={10.1109/18.108245}}
+
+@Article{Shannon:1958,
+author = {C. Shannon},
+title = {Channels with side information at the transmitter},
+journal = {{IBM} Journal of Res. Development},
+year = {1958},
+OPTkey = {},
+volume = {2},
+OPTnumber = {},
+pages = {289--293},
+OPTmonth = {},
+OPTnote = {},
+OPTannote = {}
+}
+
+
+@Article{polyanskiy:TIT2010,
+author = {Y. Polyanskiy and  H. V. Poor and S. Verd\'u},
+title = {Channel coding rate in the finite blocklength regime},
+journal = {IEEE Trans. Inf. Theory},
+year = {2010},
+OPTkey = {},
+volume = {56},
+number = {5},
+pages = {2307--2359}
+}
+
+@Article{Hayashi,
+author = {M. Hayashi},
+title = {Information-Spectrum Approach to Second-Order Coding Rate in Channel Coding},
+journal = {IEEE Trans. Inf. Theory},
+year = {2009},
+OPTkey = {},
+volume = {55},
+number = {11},
+pages = {4947-4966},
+month = nov,
+OPTnote = {},
+OPTannote = {}
+}
+
+
+@Article{Shannon:1948,
+author = {C.E. Shannon},
+title = {A mathematical theory of communication},
+journal = "Bell Syst. Tech. J.",
+year = {1948},
+OPTkey = {},
+volume = {27},
+number = {379-423, 623-656},
+OPTpages = {},
+month = {Jul., Oct.},
+OPTnote = {},
+OPTannote = {}
+}
+
+
+@article{Shannon1959Gaussian,
+  author  = {Shannon, Claude E.},
+  title   = {Probability of Error for Optimal Codes in a {G}aussian Channel},
+  journal = {Bell System Technical Journal},
+  volume  = {38},
+  number  = {3},
+  pages   = {611--656},
+  year    = {1959}
+}
+
+@article{Yoshihara1964StrongConverse,
+  author  = {Yoshihara, K.},
+  title   = {Simple Proofs for the Strong Converse Theorems in Some Channels},
+  journal = {Kodai Mathematical Seminar Journal},
+  volume  = {16},
+  number  = {4},
+  pages   = {213--222},
+  year    = {1964}
+}
+
+@book{Wolfowitz1978CodingTheorems,
+  author    = {Wolfowitz, Jacob},
+  title     = {Coding Theorems of Information Theory},
+  edition   = {3},
+  publisher = {Springer-Verlag},
+  address   = {New York, NY, USA},
+  year      = {1978}
+}
+
+@Phdthesis{polyanskiy:thesis,
+author={Y. Polyanskiy},
+title={Channel coding: non-asymptotic fundamental limits},
+school={Princeton University},
+year={2010},
+}
+
