--- a/DoR_Bounds.tex
+++ b/DoR_Bounds.tex
@@ -1,6 +1,6 @@
 \begin{theorem}
 \label{thm:infoDensityAchievabilityDoR}
-(DoR) An $(n,\mathcal{L},M,K,\epsilon_1,\epsilon_2,\bar{n},P)$ early stopping $M$-$K$ code for the P2P AWGN channel exists with the following  bounds:
+(DoR) An $(n,\mathcal{L},M,K,\epsilon_1,\epsilon_2,\bar{n},P)$ early stopping $M$-$K$ code for the \ac{P2P} \ac{AWGN} channel exists with the following  bounds:
 
 \begin{subequations}
 \begin{align}
@@ -16,5 +16,8 @@
 \end{align}
 \label{eq:infoDensityAchievabilityDoR}
 \end{subequations}
-where $\lambda_0,\lambda_1 \in \mathbb{R}$ are constants that may be optimized .  The proof of Theorem \ref{thm:infoDensityAchievabilityDoR} is given in Appendix \ref{appendix:thm1Proof}.
+where $\lambda_0,\lambda_1 \in \mathbb{R}$ are constants that may be optimized .
 \end{theorem}
+\begin{proof}
+  The proof of Theorem \ref{thm:infoDensityAchievabilityDoR} is given in Section \ref{appendix:thm1Proof}.
+\end{proof}
